<?xml version="1.0" encoding="utf-8"?>
<!-- Connor Murray 991553779 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07D9F4"
    tools:context=".ConnorActivity">

    <TextView
        android:id="@+id/connorTV"
        android:layout_width="347dp"
        android:layout_height="62dp"
        android:lines="4"
        android:text="@string/text_main"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />
    <!--
    For us
    -->
    <Button
        android:id="@+id/btnLaunch"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="148dp"
        android:onClick="callIntent"
        android:text="@string/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textMessage"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_title"
        android:inputType="text"
        android:text="@string/text_placehold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSnack"
        android:layout_width="194dp"
        android:layout_height="54dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="224dp"
        android:onClick="callIntent"
        android:text="@string/text_swap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="143dp"
        android:contentDescription="@string/text_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_view" />

</androidx.constraintlayout.widget.ConstraintLayout>