<?xml version="1.0" encoding="utf-8"?>
<!-- Connor Murray 991553779 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDB00"
    android:foregroundTint="#EDDFDF"
    tools:context=".MurrayActivity">

    <TextView
        android:id="@+id/textSecond"
        android:layout_width="309dp"
        android:layout_height="66dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:lines="3"
        android:text="@string/text_second"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="187dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="212dp"
        android:max="100"
        android:progress="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="168dp"
        android:text="@string/text_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="448dp"
        android:text="@string/text_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>